package com.designpatterns.java.structural.facade;

public interface MobileShop {
  public void modelNo();
  public void price();
}
