@startuml

title __FACADE's Class Diagram__\n

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.facade {
        class com.designpatterns.java.structural.facade.Blackberry {
            + modelNo()
            + price()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.facade {
        class com.designpatterns.java.structural.facade.FacadePatternClient {
            {static} - choice : int
            {static} + main()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.facade {
        class com.designpatterns.java.structural.facade.Iphone {
            + modelNo()
            + price()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.facade {
        interface com.designpatterns.java.structural.facade.MobileShop {
            {abstract} + modelNo()
            {abstract} + price()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.facade {
        class com.designpatterns.java.structural.facade.Samsung {
            + modelNo()
            + price()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.facade {
        class com.designpatterns.java.structural.facade.ShopKeeper {
            + ShopKeeper()
            + blackberrySale()
            + iphoneSale()
            + samsungSale()
        }
      }
    }
  }
  

  com.designpatterns.java.structural.facade.Blackberry .up.|> com.designpatterns.java.structural.facade.MobileShop
  com.designpatterns.java.structural.facade.Iphone .up.|> com.designpatterns.java.structural.facade.MobileShop
  com.designpatterns.java.structural.facade.Samsung .up.|> com.designpatterns.java.structural.facade.MobileShop
  com.designpatterns.java.structural.facade.ShopKeeper o-- com.designpatterns.java.structural.facade.MobileShop : blackberry
  com.designpatterns.java.structural.facade.ShopKeeper o-- com.designpatterns.java.structural.facade.MobileShop : iphone
  com.designpatterns.java.structural.facade.ShopKeeper o-- com.designpatterns.java.structural.facade.MobileShop : samsung


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
